--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Candidate Matching Benchmark</title>
+    <title>BARS | Open-Match-Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,48 +20,19 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">Candidate Matching</a></h1>
+                <h1><a href="./index.html" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
-                        <a href="./index.html">Introduction</a>
+                        <a href="./index.html">Candidate Item Matching</a>
                     </li>
                     <li>
                         <a href="./models.html">Models</a>
                     </li>
                     <li>
-                        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datasets</a>
-                        <ul class="collapse list-unstyled" id="pageSubmenu">
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonBooks" target="_blank">AmazonBooks</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#Yelp18" target="_blank">Yelp18</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#Gowalla" target="_blank">Gowalla</a>
-                            </li>
-                            <li>
-                                <a hred="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#Movielens1M" target='_blank'>Movielens1M</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonCDs" target="_blank">AmazonCDs</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonMovies" target="_blank">AmazonMovies</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonBeauty" target="_blank">AmazonBeauty</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonElectronics" target="_blank">AmazonElectronics</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#CiteULike-A" target="_blank">CiteULike-A	</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#Taobao" target="_blank">Taobao</a>
-                            </li>
-                        </ul>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md", target="_blank">Datasets</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md", target="_blank">Toolkits</a>
                     </li>
                     <li>
                         <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benmarking Results</a>
@@ -78,30 +49,26 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md">Call for Contributions</a>
-                    </li>
-                    <!-- <li>
-                        <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Related Links</a>
+                        <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">BARS Links</a>
                         <ul class="collapse list-unstyled" id="Links">
-                            <li>
-                                <a href="#">Fuxictr package</a>
-                            </li>
                             <li>
                                 <a href="https://openbenchmark.github.io/ctr-prediction">Open-CTR-Benchmark</a>
                             </li>
+                            <li>
+                                <a href="https://openbenchmark.github.io/candidate-matching">Open-Match-Benchmark</a>
+                            </li>
                         </ul>
-                    </li> -->
+                    </li>
+                    <li>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md", target="_blank">Call for Contributions</a>
+                    </li>
                     <li>
                         <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new" ,target='_blank'>Feedback</a>
                     </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" ,target='_blank'>Toolkits</a>
-                    </li>
                 </ul>
 
-
                 <div class='mb-5'>
-                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork us on Github
+                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork Github Repo
                     </button>
                 </div>
                 <!-- <div class="mb-5">
@@ -111,21 +78,28 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Open Benchmarking for Candidate Item Matching</h2>
-            <p>Welcome to the open benchmarking site for candidate item matching.</p>
+            <h2 class="mb-4">BARS / Open-Match-Benchmark</h2>
+            <p><strong>Congratulations! You have found BARS, an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
+            <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching belongs to the first matching phase that is designed to efficiently retrieve hundreds of item candidates out of the entire item corpus. Collaborative filtering is also one of the most representative methods used for candidate item matching. To drive research in this direction, the BARS project builds an open benchmark for candidate item matching, which consists of:</p>
+
+            <ul>
+              <li><a href="./models.html">A curated list of models on candidate item matching</a>, which have been tagged into different types of methods, such as CF, GNNs, graph embedding, auto-encoders, two-tower models, etc.</li>
+              <li><a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md", target="_blank">A collection of public datasets for research on candidate item matching</a>, and unique dataset IDs to track specific data splits for each dataset.</li>
+              <li><a href="https://github.com/xue-pai/DEEM", target="_blank">An open-source library for candidate item matching (namely DEEM)</a> with configurable, tunable, and reproducible designs.</li>
+              <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings.</li>
+            </ul>
+
+            <p>The ultimate goal of BARS is to drive reproducible research in the development of recommender systems.</p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <!-- <script src="https://openbenchmark.github.io/candidate-matching/js/popper.js"></script>
-    <script src="https://openbenchmark.github.io/candidate-matching/js/bootstrap.min.js"></script>
-    <script src="https://openbenchmark.github.io/candidate-matching/js/main.js"></script> -->
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $("#fork-btn").click(function() {
-                location.href = "https://github.com/openbenchmark/openbenchmark.github.io";
+                location.href="https://github.com/xue-pai/Open-Match-Benchmark";
             });
         });
     </script>
