--- a/candidate-matching/models.html
+++ b/candidate-matching/models.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Candidate Matching Benchmark | Models</title>
+    <title>BARS | Open-Match-Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,48 +21,19 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">Candidate Matching</a></h1>
+                <h1><a href="./index.html" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
-                        <a href="index.html">Introduction</a>
+                        <a href="./index.html">Candidate Item Matching</a>
                     </li>
                     <li>
-                        <a href="models.html">Models</a>
+                        <a href="./models.html">Models</a>
                     </li>
                     <li>
-                        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datasets</a>
-                        <ul class="collapse list-unstyled" id="pageSubmenu">
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonBooks" target="_blank">AmazonBooks</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#Yelp18" target="_blank">Yelp18</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#Gowalla" target="_blank">Gowalla</a>
-                            </li>
-                            <li>
-                                <a hred="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#Movielens1M" target='_blank'>Movielens1M</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonCDs" target="_blank">AmazonCDs</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonMovies" target="_blank">AmazonMovies</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonBeauty" target="_blank">AmazonBeauty</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#AmazonElectronics" target="_blank">AmazonElectronics</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#CiteULike-A" target="_blank">CiteULike-A	</a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets.md#Taobao" target="_blank">Taobao</a>
-                            </li>
-                        </ul>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md", target="_blank">Datasets</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md", target="_blank">Toolkits</a>
                     </li>
                     <li>
                         <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benmarking Results</a>
@@ -79,28 +50,26 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md">Call for Contributions</a>
-                    </li>
-                    <!-- <li>
-                        <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Related Links</a>
+                        <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">BARS Links</a>
                         <ul class="collapse list-unstyled" id="Links">
-                            <li>
-                                <a href="#">FuxiCTR package</a>
-                            </li>
                             <li>
                                 <a href="https://openbenchmark.github.io/ctr-prediction">Open-CTR-Benchmark</a>
                             </li>
+                            <li>
+                                <a href="https://openbenchmark.github.io/candidate-matching">Open-Match-Benchmark</a>
+                            </li>
                         </ul>
-                    </li> -->
+                    </li>
+                    <li>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md", target="_blank">Call for Contributions</a>
+                    </li>
                     <li>
                         <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new" ,target='_blank'>Feedback</a>
                     </li>
-                    <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" ,target='_blank'>Toolkits</a>
-                    </li>
                 </ul>
+
                 <div class='mb-5'>
-                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork us on Github
+                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork Github Repo
                     </button>
                 </div>
                 <!-- <div class="mb-5">
@@ -110,8 +79,7 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">A List of Candidate Item Matching Models</h2>
-            <p>Welcome to the open benchmarking site for candidate item matching.</p>
+            <h2 class="mb-4">A List of Models on Candidate Item Matching</h2>
 
             <!-- Add data table -->
             <table id="table1" class="table table-bordered">
@@ -134,7 +102,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#fork-btn").click(function() {
-                location.href = "https://github.com/openbenchmark/openbenchmark.github.io";
+                location.href="https://github.com/xue-pai/Open-Match-Benchmark";
             });
         });
     </script>
