--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -101,9 +101,9 @@
             <p>Click-through rate (CTR) prediction, or user response prediction in general, is an important task in the ranking phase of recommender systems. The BARS project aims to build an open benchmark for CTR prediction, which consists of:</p>
 
             <ul>
-              <li>A curated list of CTR prediction models which have been tagged into different types, such as feature-interactions, user-interest-modeling, multi-task modeling, cross-domain modeling, AutoML, etc.</li>
-              <li>A collection of public datasets for CTR prediction research, and unique dataset IDs to track specific data splits for each dataset.</li>
-              <li>An open-source library for CTR prediction, with configurable, tunable, and reproducible designs.</li>
+              <li><a href="./models.html">A curated list of CTR prediction models</a> which have been tagged into different types, such as feature-interactions, user-interest-modeling, multi-task modeling, cross-domain modeling, AutoML, etc.</li>
+              <li><a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets/README.md", target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data splits for each dataset.</li>
+              <li><a href="https://github.com/xue-pai/FuxiCTR", target="_blank">An open-source library for CTR prediction (namely FuxiCTR)</a> with configurable, tunable, and reproducible designs.</li>
               <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings.</li>
             </ul>
 
