--- a/candidate-matching/models.html
+++ b/candidate-matching/models.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.2/candidate-matching/css/datatables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
 </head>
 
@@ -22,7 +22,7 @@
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="./index.html" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5">
+                <ul class="list-unstyled components mb-5 no-bullet">
                     <li class="active">
                         <a href="./index.html">Candidate Item Matching</a>
                     </li>
