--- a/candidate-matching/leaderboard/amazonbooks_x0_001.html
+++ b/candidate-matching/leaderboard/amazonbooks_x0_001.html
@@ -30,10 +30,10 @@
                         <a href="../models.html">Models</a>
                     </li>
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md", target="_blank">Datasets</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" , target="_blank">Datasets</a>
                     </li>
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md", target="_blank">Toolkits</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" , target="_blank">Toolkits</a>
                     </li>
                     <li>
                         <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benmarking Results</a>
@@ -61,7 +61,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md", target="_blank">Call for Contributions</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md" , target="_blank">Call for Contributions</a>
                     </li>
                     <li>
                         <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new" ,target='_blank'>Feedback</a>
@@ -96,15 +96,19 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
     <script src="../js/tablecharts.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
             "https://raw.githubusercontent.com/xue-pai/Open-Match-Benchmark/master/results/amazonbooks_x0.json",
         ));
+    </script> -->
+    <script type="text/javascript">
+        $(document).ready(createTableChart('table1', 'chart1',
+            "https://cdn.jsdelivr.net/gh/xue-pai/Open-Match-Benchmark/results/amazonbooks_x0_001.json"));
     </script>
     <script type="text/javascript">
         $(document).ready(function() {
             $("#fork-btn").click(function() {
-                location.href="https://github.com/xue-pai/Open-Match-Benchmark";
+                location.href = "https://github.com/xue-pai/Open-Match-Benchmark";
             });
         });
     </script>
