--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -30,10 +30,10 @@
                         <a href="./models.html">Models</a>
                     </li>
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md", target="_blank">Datasets</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" , target="_blank">Datasets</a>
                     </li>
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md", target="_blank">Toolkits</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" , target="_blank">Toolkits</a>
                     </li>
                     <li>
                         <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benmarking Results</a>
@@ -61,7 +61,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md", target="_blank">Call for Contributions</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md" , target="_blank">Call for Contributions</a>
                     </li>
                     <li>
                         <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new" ,target='_blank'>Feedback</a>
@@ -81,13 +81,15 @@
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">BARS / Open-Match-Benchmark</h2>
             <p><strong>Congratulations! You have found BARS, an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
-            <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching belongs to the first matching phase that is designed to efficiently retrieve hundreds of item candidates out of the entire item corpus. Collaborative filtering is also one of the most representative methods used for candidate item matching. To drive research in this direction, the BARS project builds an open benchmark for candidate item matching, which consists of:</p>
+            <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching belongs to the first matching phase that is designed to efficiently retrieve hundreds of item candidates out of the entire item corpus. Collaborative
+                filtering is also one of the most representative methods used for candidate item matching. To drive research in this direction, the BARS project builds an open benchmark for candidate item matching, which consists of:</p>
 
             <ul>
-              <li><a href="./models.html">A curated list of models on candidate item matching</a>, which have been tagged into different types of methods, such as CF, GNNs, graph embedding, auto-encoders, two-tower models, etc.</li>
-              <li><a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md", target="_blank">A collection of public datasets for research on candidate item matching</a>, and unique dataset IDs to track specific data splits for each dataset.</li>
-              <li><a href="https://github.com/xue-pai/DEEM", target="_blank">An open-source library for candidate item matching (namely DEEM)</a> with configurable, tunable, and reproducible designs.</li>
-              <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings.</li>
+                <li><a href="./models.html">A curated list of models on candidate item matching</a>, which have been tagged into different types of methods, such as CF, GNNs, graph embedding, auto-encoders, two-tower models, etc.</li>
+                <li><a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" , target="_blank">A collection of public datasets for research on candidate item matching</a>, and unique dataset IDs to track specific data splits
+                    for each dataset.</li>
+                <li><a href="https://github.com/xue-pai/DEEM" , target="_blank">An open-source library for candidate item matching (namely DEEM)</a> with configurable, tunable, and reproducible designs.</li>
+                <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings.</li>
             </ul>
 
             <p>The ultimate goal of BARS is to drive reproducible research in the development of recommender systems.</p>
@@ -100,7 +102,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#fork-btn").click(function() {
-                location.href="https://github.com/xue-pai/Open-Match-Benchmark";
+                location.href = "https://github.com/xue-pai/Open-Match-Benchmark";
             });
         });
     </script>
