--- a/ctr-prediction/leaderboard/criteo_x4_002.html
+++ b/ctr-prediction/leaderboard/criteo_x4_002.html
@@ -115,10 +115,10 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
     <script src="../js/tablecharts.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
             "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/criteo_x4_002.json"));
-    </script>
+    </script> -->
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
             "https://cdn.jsdelivr.net/gh/xue-pai/Open-CTR-Benchmark/results/criteo_x4_002.json"));
