--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -21,10 +21,10 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1><a href="./index.html" class="logo">BARS</a></h1>
+                <h1><a href="https://openbenchmarking.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet">
                     <li class="active">
-                        <a href="./index.html">Candidate Item Matching</a>
+                        <a href="./index.html">Open-Match-Benchmark</a>
                     </li>
                     <li>
                         <a href="./models.html">Models</a>
@@ -50,17 +50,6 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">BARS Links</a>
-                        <ul class="collapse list-unstyled" id="Links">
-                            <li>
-                                <a href="https://openbenchmark.github.io/ctr-prediction">Open-CTR-Benchmark</a>
-                            </li>
-                            <li>
-                                <a href="https://openbenchmark.github.io/candidate-matching">Open-Match-Benchmark</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
                         <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/CONTRIBUTING.md" , target="_blank">Call for Contributions</a>
                     </li>
                     <li>
@@ -79,7 +68,7 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">BARS / Open-Match-Benchmark</h2>
+            <h2 class="mb-4">Open-Match-Benchmark</h2>
             <p><strong>Congratulations! You have found BARS, an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
             <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching belongs to the first matching phase that is designed to efficiently retrieve hundreds of item candidates out of the entire item corpus. Collaborative
                 filtering is also one of the most representative methods used for candidate item matching. To drive research in this direction, the BARS project builds an open benchmark for candidate item matching, which consists of:</p>
