--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -21,10 +21,10 @@
                 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1><a href="./index.html" class="logo">BARS</a></h1>
+                <h1><a href="https://openbenchmarking.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet">
                     <li class="active">
-                        <a href="./index.html">CTR Prediction</a>
+                        <a href="./index.html">Open-CTR-Benchmark</a>
                     </li>
                     <li>
                         <a href="./models.html">Models</a>
@@ -68,17 +68,6 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">BARS Links</a>
-                        <ul class="collapse list-unstyled" id="Links">
-                            <li>
-                                <a href="https://openbenchmark.github.io/ctr-prediction">Open-CTR-Benchmark</a>
-                            </li>
-                            <li>
-                                <a href="https://openbenchmark.github.io/candidate-matching">Open-Match-Benchmark</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
                         <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/CONTRIBUTING.md" , target="_blank">Call for Contributions</a>
                     </li>
                     <li>
@@ -97,7 +86,7 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">BARS / Open-CTR-Benchmark</h2>
+            <h2 class="mb-4">Open-CTR-Benchmark</h2>
             <p><strong>Congratulations! You have found BARS, an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
             <p>Click-through rate (CTR) prediction, or user response prediction in general, is an important task in the ranking phase of recommender systems. The BARS project aims to build an open benchmark for CTR prediction, which consists of:</p>
 
@@ -108,7 +97,7 @@
                 <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings.</li>
             </ul>
 
-            <p>The ultimate goal of BARS is to drive research in the development of recommender systems.</p>
+            <p>The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
