--- a/candidate-matching/models.html
+++ b/candidate-matching/models.html
@@ -21,10 +21,10 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1><a href="./index.html" class="logo">BARS</a></h1>
+                <h1><a href="https://openbenchmarking.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet">
                     <li class="active">
-                        <a href="./index.html">Candidate Item Matching</a>
+                        <a href="./index.html">Open-Match-Benchmark</a>
                     </li>
                     <li>
                         <a href="./models.html">Models</a>
@@ -46,17 +46,6 @@
                             </li>
                             <li>
                                 <a href="./leaderboard/gowalla_x0_001.html">gowalla_x0_001</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">BARS Links</a>
-                        <ul class="collapse list-unstyled" id="Links">
-                            <li>
-                                <a href="https://openbenchmark.github.io/ctr-prediction">Open-CTR-Benchmark</a>
-                            </li>
-                            <li>
-                                <a href="https://openbenchmark.github.io/candidate-matching">Open-Match-Benchmark</a>
                             </li>
                         </ul>
                     </li>
