Update incorrect link

--- a/candidate-matching/models.html
+++ b/candidate-matching/models.html
@@ -21,10 +21,10 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1><a href="https://openbenchmarking.github.io/BARS" class="logo">BARS</a></h1>
+                <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet">
                     <li class="active">
-                        <a href="./index.html">Open-Match-Benchmark</a>
+                        <a href="./">Open-Match-Benchmark</a>
                     </li>
                     <li>
                         <a href="./models.html">Models</a>
@@ -86,12 +86,12 @@
     <script src="./js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createModelTable('table1',
-            "https://raw.githubusercontent.com/xue-pai/Open-Match-Benchmark/master/models/papers.json"));
+            "https://cdn.jsdelivr.net/gh/xue-pai/Open-Match-Benchmark/models/papers.json"));
     </script>
     <script type="text/javascript">
         $(document).ready(function() {
             $("#fork-btn").click(function() {
-                location.href = "https://github.com/xue-pai/Open-Match-Benchmark";
+                location.href="https://github.com/xue-pai/Open-Match-Benchmark";
             });
         });
     </script>
