--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -21,10 +21,10 @@
                 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1><a href="https://openbenchmarking.github.io/BARS" class="logo">BARS</a></h1>
+                <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet">
                     <li class="active">
-                        <a href="./index.html">Open-CTR-Benchmark</a>
+                        <a href="./">Open-CTR-Benchmark</a>
                     </li>
                     <li>
                         <a href="./models.html">Models</a>
