--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -77,8 +77,8 @@
                 <li><a href="./models.html">A curated list of models on candidate item matching</a>, which have been tagged into different types of methods, such as CF, GNNs, graph embedding, auto-encoders, two-tower models, etc.</li>
                 <li><a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/datasets/README.md" , target="_blank">A collection of public datasets for research on candidate item matching</a>, and unique dataset IDs to track specific data splits
                     for each dataset.</li>
-                <li><a href="https://github.com/xue-pai/DEEM" , target="_blank">An open-source library for candidate item matching (namely DEEM)</a> with configurable, tunable, and reproducible designs.</li>
-                <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings.</li>
+                <li>A collection of <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" , target="_blank">open-source toolkits for candidate item matching</a>.</li>
+                <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings. For each result, the detailed reproducing step is provided along with the open-source code.</li>
             </ul>
 
             <p>The ultimate goal of BARS is to drive reproducible research in the development of recommender systems.</p>
