--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -94,7 +94,7 @@
                 <li><a href="./models.html">A curated list of CTR prediction models</a> which have been tagged into different types, such as feature-interactions, user-interest-modeling, multi-task modeling, cross-domain modeling, AutoML, etc.</li>
                 <li><a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets/README.md" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data splits for each dataset.</li>
                 <li><a href="https://github.com/xue-pai/FuxiCTR" , target="_blank">An open-source library for CTR prediction (namely FuxiCTR)</a> with configurable, tunable, and reproducible designs.</li>
-                <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings.</li>
+                <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings. For each result, the detailed reproducing step is provided along with the open-source code.</li>
             </ul>
 
             <p>The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
