--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -93,8 +93,8 @@
             <ul>
                 <li><a href="./models.html">A curated list of CTR prediction models</a> which have been tagged into different types, such as feature-interactions, user-interest-modeling, multi-task modeling, cross-domain modeling, AutoML, etc.</li>
                 <li><a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets/README.md" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data splits for each dataset.</li>
-                <li><a href="https://github.com/xue-pai/FuxiCTR" , target="_blank">An open-source library for CTR prediction (namely FuxiCTR)</a> with configurable, tunable, and reproducible designs.</li>
-                <li>Most importantly, the most comprehensive benchmarking results on various dataset IDs and settings. For each result, the detailed reproducing step is provided along with the open-source code.</li>
+                <li><a href="https://github.com/xue-pai/OpenCTR", target="_blank">An open-source library for CTR prediction</a> with stunning features in configurablity, tunablity, and reproduciblity.</li>
+                <li>Most importantly, the most comprehensive <a href="https://openbenchmark.github.io/ctr-prediction/leaderboard/criteo_x4_001.html", target="_blank">benchmarking results on various dataset IDs and settings</a>. For each result, the detailed reproducing step is provided along with the open-source benchmarking code.</li>
             </ul>
 
             <p>The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
