--- a/BARS/index.html
+++ b/BARS/index.html
@@ -30,7 +30,7 @@
                     <hr class="section-heading-spacer"></h1>
                     <div class="clearfix"></div>
 
-                    <p> Openness in science is key to fostering progress. BARS is a project aimed for open <strong>B</strong>enchm<strong>A</strong>rking for <strong>R</strong>ecommender <strong>S</strong>ystems, allowing better reproducibility and replicability of quantitative studies. The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems. In summary, BARS is built with the following key features:</p>
+                    <p> Openness is key to fostering progress in science. BARS is a project aimed for open <strong>B</strong>enchm<strong>A</strong>rking for <strong>R</strong>ecommender <strong>S</strong>ystems, allowing better reproducibility and replicability of quantitative studies. The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems. In summary, BARS is built with the following key features:</p>
 
                     <ul> 
                         <li> <strong>Open datasets</strong>: BARS collects a set of widely-used public datasets for recommendation research, and assign unique dataset IDs to track specific data partitions of each dataset. This allows to share and experiment with the datasets in a uniform way. 
@@ -48,15 +48,16 @@
                         <li> <strong>Reproducing steps</strong>: The core of BARS is to ensure reproducibility of each benchmarking result through detailed recordings of the reproducing steps, following the open benchmarking pipeline. 
                         </li>
 
-                        <li> <strong>Editable by anyone</strong>: BARS is open to the community. Anyone can contribute new datasets, new models, or new benchmarking results through a pull request on Github.
+                        <li> <strong>Editable by anyone</strong>: BARS is open to the community. Anyone can contribute new datasets, new models, or new benchmarking results through a pull request on Github. The contributor will be marked in the benchmark accordingly.
                         </li>
                     </ul>
 
-                    <p>By setting the open benchmarking standard, together with the freely available datasets, source code, and reproducing steps, we hope that the BARS project could benefit all researchers, practitioners, and educators in the community.</p>
+                    <p>By setting up an open benchmarking standard, together with the freely available datasets, source code, and reproducing steps, we hope that the BARS project could benefit all researchers, practitioners, and educators in the community.</p>
                 </div>
             </div>
             <div class="col-md-8 col-md-offset-2">
-                <img src="img/benchmark_pipeline.jpg" alt="Open benchmarking pipeline">
+                <img src="img/benchmark_pipeline.jpg" title="Open benchmarking pipeline">
+                <center>Figure: Open benchmarking pipeline</center>
             </div>
         </div>
         <!-- /.container -->
@@ -72,7 +73,7 @@
 
 
 <footer>
-<div class="info"><p class="copyright">Open Benchmarking for Recommender Systems<br>© 2021 OpenBARS
+<div class="info"><p class="copyright">Towards Open Benchmarking for Recommender Systems<br>© 2021 BARS
 	</p></div>
 </footer>
 </body></html>
