--- a/candidate-matching/leaderboard/gowalla_x0_001.html
+++ b/candidate-matching/leaderboard/gowalla_x0_001.html
@@ -24,9 +24,13 @@
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
-
-                    <!-- <div class="mb-5">
+                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul"></ul>
+                <div class='mb-5'>
+                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2"
+                        data-loading-text="Loading..." type="button"> Fork Github Repo
+                    </button>
+                </div>
+                <!-- <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
                 </div> -->
             </div>
